# transcriber

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  audio_tooling.cpp  audio_tooling.h  main.cpp  transcriber.cpp  transcriber.h  utilities.h
